# UiPath_MCPServerDemo

./: .env  mcp.json  pyproject.toml
.uipath/: .auth.json  .error_log
src/demo_server/: server.py
src/demo_server/tools/: math_tools.py  uipath_tools.py
tests/tools/: conftest.py  test_math_tools.py  test_uipath_tools.py
